# ztbd

./: .gitignore  README.md  TESTS_README.md  main.py  mongo.py  neo.py  postgre.py  pyproject.toml  tests.py
mongo/: docker-compose.yaml
mysql/: docker-compose.yaml
neo4j/: docker-compose.yaml
postgresql/: docker-compose.yaml
src/ztbd/: database.py  db_manager.py  helper.py  normalizer.py  ztbdf.py
src/ztbd/mongodb/: importer.py
test_results/: performance_data_20260107_153343.json  raw_results_100000_20260108_141922.csv  raw_results_10000_20260108_141517.csv  raw_results_100_20260108_135235.csv  statistics_100000_20260108_141922.csv  statistics_100_20260108_135235.csv  test_results_1000000_20260108_144041.md  test_results_1000_20260108_140921.md  test_results_100_20260108_135235.md  test_results_20260107_153343.json
test_results/2026_01_08/: raw_results_1000000_20260108_144041.csv  raw_results_1000_20260108_140921.csv  statistics_1000000_20260108_144041.csv  statistics_10000_20260108_141517.csv  statistics_1000_20260108_140921.csv  test_results_1000000_20260108_144041.json  test_results_100000_20260108_141922.json  test_results_100000_20260108_141922.md  test_results_10000_20260108_141517.json  test_results_10000_20260108_141517.md  test_results_1000_20260108_140921.json  test_results_100_20260108_135235.json  test_results_20260107_153343.md
test_results/2026_01_13/: raw_results_1000000_20260113_204131.csv  raw_results_100000_20260113_203505.csv  raw_results_10000_20260113_202853.csv  raw_results_1000_20260113_202312.csv  raw_results_100_20260113_201740.csv  (+15 more)
(+11 files in other folders)
