[project]
name = "ztbd"
version = "0.1.0"
description = ""
authors = [
    {name = "Konrad Springer",email = "kossarpl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub[pandas-datasets] (>=0.3.13,<0.4.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "pymongo (>=4.15.4,<5.0.0)",
    "neo4j (>=6.0.3,<7.0.0)"
]

[tool.poetry]
packages = [{include = "ztbd", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
